# ratatoskr

./: CLAUDE.md  Changelog.md  README.md
docs/: ADR-001-bluetooth-architecture-strategy.md  ADR-002-apparmor-bluetooth-policy.md  ADR-003-obex-dbus-service-discovery.md  ADR-004-apparmor-dbus-receive-permissions.md  ADR-005-shareplugin-nodisplay-issue.md  ADR-006-version-management-strategy.md  INSTALL.md  Roadmap.md  architecture.md  test_proc.txt
docs/sprint-001/: completion-summary.md  scope.md
docs/sprint-002/: auto_review_error.md  scope.md  summary.md  technical-doc.md
docs/sprint-003/: research-findings.md  sprint-003-plan.md  test-analysis.md
docs/sprint-004/: test_result-260115153557.md
docs/sprint-006/: SPRINT_SUMMARY.md  SharePlugin_test_report-2.md  journal_cropped-20260122.txt
docs/sprint-007/: SharePlugin_test_report.md  journal_cropped-20260122-2.txt  journal_cropped-20260123-2.txt  journal_cropped-20260123-4.txt  journal_cropped-20260127-3.txt  journal_cropped-20260127-4.txt  journal_cropped-20260127.txt  shareplugin-fix-summary.md  (+2 more)
ratatoskr/: CMakeLists.txt  Main.qml  README.md  bluetoothmanager.cpp  bluetoothmanager.h  build.sh  clickable.yaml  devicediscovery.cpp  devicediscovery.h  get-version.sh  main.cpp  manifest.json.in  obexagent.cpp  obexagent.h  obexd.cpp  obexd.h  obextransfer.cpp  obextransfer.h  ratatoskr.apparmor  snapcraft.yaml  transfer.cpp
ratatoskr/shareplugin/: CMakeLists.txt  Main.qml  bluetooth-contenthub.json  bttransfer.h  devicenameresolver.cpp  devicenameresolver.h  main.cpp  shareplugin.apparmor  shareplugin.desktop
(+13 files in other folders)
